--- a/webapp/templates/_formhelpers.html
+++ b/webapp/templates/_formhelpers.html
@@ -1,6 +1,7 @@
 {% macro render_field(field) %}
-  <dt>{{ field.label(class="sr-only") }}</dt>
-  <dd>{{ field(**kwargs)|safe }}
+<div class="form-group">
+  {{ field.label(class="sr-only") }}
+  {{ field(**kwargs)|safe }}
   {% if field.errors %}
     <ul class=error>
     {% for error in field.errors %}
@@ -8,18 +9,41 @@
     {% endfor %}
     </ul>
   {% endif %}
-  </dd>
+</div>
 {% endmacro %}
-
-{% macro render_field_nolabel(field) %}
-  <dt></dt>
-  <dd>{{ field(**kwargs)|safe }}
-  {% if field.errors %}
-    <ul class=error>
-    {% for error in field.errors %}
-      <li>{{ error }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-  </dd>
+{% macro render_email_field(field) %}
+<div class="form-group">
+  {{ field.label(class="sr-only") }}
+  <div class="input-group">
+    <span class="input-group-addon">@</span>
+    {{ field(**kwargs)|safe }}
+    {% if field.errors %}
+      <ul class=error>
+      {% for error in field.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
+</div>
+{% endmacro %}
+{% macro render_file_field(field) %}
+<div class="form-group">
+  {{ field.label(class="sr-only") }}
+  <div class="input-group">
+    <span class="input-group-btn">
+      <span class="btn btn-primary btn-file">
+        Browse… {{ field(**kwargs)|safe }}
+      </span>
+    </span>
+    <input id="attachment_text" class="form-control" readonly="" type="text">
+    {% if field.errors %}
+      <ul class=error>
+      {% for error in field.errors %}
+        <li>{{ error }}</li>
+      {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
+</div>
 {% endmacro %}
