--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Share your knowledge with peer and partners">
     <meta name="author" content="Javier Caballero">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.png') }}">
-    <title>tyrachinas: Share your knowledge</title>
+    <title>{{ appname }}: Share your knowledge</title>
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
@@ -22,7 +22,7 @@
     <div class="cover" data-color="green"></div>
     <div class="container">
       <h1 class="logo cursive">
-        Tyrachinas
+        {{ appname|title }}
       </h1>
 
       <div class="content">
