Form errors should appear in red

--- a/webapp/static/css/custom.css
+++ b/webapp/static/css/custom.css
@@ -47,6 +47,11 @@
 .flashes .error {
   color: red;
 }
+
+ul.error {
+  color: red;
+}
+
 .main{
     background-position: center center;
     background-size: cover;
